# dictionary-HTMK

./: .gitignore  CMakeLists.txt  README.md  debug.cpp  debug.h  dictionary-HTMK.cpp  dictionary-HTMK.sln  dictionary-HTMK.vcxproj  dictionary-HTMK.vcxproj.filters  dictionary.cpp  dictionary.hpp  editWords.cpp  editWords.hpp  favourites.cpp  favourites.hpp  game.cpp  game.hpp  graphic.cpp  graphic.hpp  header.hpp  history.cpp  history.hpp  main.cpp  mainprogram.cpp  mainprogram.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.hpp  randomWord.cpp  randomWord.h  restore.cpp  restore.h
data/: history.txt
data/backup/: slang.txt  test
data/backup/binary/: engengtext.txt
data/backup/text/: VietnameseEnglish.txt
data/dictionaries/: emotional  list_of_dictionary.txt  slang
data/dictionaries/binary/: emotional
data/dictionaries/text/: emotional.txt
data/favourite/: slang.txt
data/history/: engengtext.txt  slang.txt  slang.txt.txt  test.txt
data/raw/: EnglishVietnamese.txt  VieEng.txt  slang.txt
ds/: algorithm.hpp  avl_tree.cpp  avl_tree.hpp  cqueue.hpp  entry.cpp  entry.hpp  flist.hpp  fnode.hpp  htable.cpp  htable.hpp  linear_finder.cpp  linear_finder.hpp  match.hpp  nqueue.hpp  sh_ptr.hpp  shptr.hpp  strmanip.cpp  strmanip.hpp  trie.cpp  trie.hpp
raw/: editWords.cpp  editWords.hpp  slang.txt
source_backup/: note.txt
